--- a/style.css
+++ b/style.css
@@ -21,10 +21,24 @@ body {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+.cabecalho img{
+    width: 40px;
+    position: absolute;
+    left: 100px;
+}
+
+body:has(.cabecalho img:hover) .menu{
+    display: block;
+}
+
+.menu:hover{
+    display: block;
+}
 .menu {
+    display: none;
     position: fixed;
-    top: 10%;
-    right: 5%;
+    top: 7.9%;
+    left: 5%;
     background: #2c3e50;
     color: white;
     padding: 2%;
@@ -46,13 +60,41 @@ body {
 
 .banner {
     width: 100%;
-    height: 30vh;
-    background: url('https://via.placeholder.com/1200x300') no-repeat center center;
+    height: 40vh;
     background-size: cover;
     margin-top: 10%;
     margin-bottom: 5%;
     border-radius: 10px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.banner img{
+    width: 500px;
+    border-radius: 10px;
+}
+
+.reportagem{
+    color: rgb(0, 0, 0);
+    padding: 2%;
+    border-radius: 10px;
+    width: 60%;
+}
+.reportagem p{
+    color: #7f8c8d;
+}
+
+.reportagem a {
+    text-decoration: none;
+    color: #f39c12;
+    font-weight: bold;
+}
+
+.reportagem a:hover {
+    color: #e67e22;
 }
 
 .conteiner-noticias {
